--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "RP4-ComponenteCriminoso",
+  "name": "criminoso",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/SabrinaRF/RP4-ComponenteCriminoso.git",
+  "repository": "https://github.com/rp4-policia-internacional/criminoso.git",
   "author": "sabrina <sabrinarfernandes.srf@gmail.com>",
   "license": "MIT",
   "devDependencies": {
@@ -39,6 +39,7 @@
     "pg": "^8.11.3",
     "prisma": "^5.2.0",
     "prisma-exclude": "^1.0.2",
+    "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.8.0",
     "uuidv4": "^6.2.13"
   },
