--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
@@ -40,6 +41,7 @@
     "prisma": "^5.2.0",
     "prisma-exclude": "^1.0.2",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^5.0.0",
     "tsyringe": "^4.8.0",
     "uuidv4": "^6.2.13"
   },
