--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-typescript": "^7.22.15",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -46,6 +47,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jest": "^29.7.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "prisma": "^5.2.0",
     "prisma-exclude": "^1.0.2",
